<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/app_margin"
    android:background="@color/colorAppBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/kittens_licking_paws"
            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></fragment>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/kitten_paw"
                android:layout_width="@dimen/small_image_width"
                android:layout_height="@dimen/small_image_height"
                android:layout_margin="@dimen/small_image_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/kitten_paw" />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="@color/colorIndigo"
                android:textSize="@dimen/big_font_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorIndigoLight"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:id="@+id/webpage"
            style="@style/contactsTexts"
            android:autoLink="web"
            android:drawableLeft="@drawable/web_icon_s"
            android:text="@string/webpage" />

        <TextView
            android:id="@+id/phone"
            style="@style/contactsTexts"
            android:autoLink="phone"
            android:drawableLeft="@drawable/phone_icon_s"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/address"
            style="@style/contactsTexts"
            android:autoLink="map"
            android:drawableLeft="@drawable/map_icon_s"
            android:text="@string/address" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_height"
            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

        <TextView
            android:id="@+id/hours"
            style="@style/contactsTexts"
            android:autoLink="web"
            android:drawableLeft="@drawable/clock_icon_s"
            android:text="@string/hours" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/show_cats"
                style="@style/myButtons"
                android:onClick="showCats"
                android:text="@string/show_cats" />

            <Button
                android:id="@+id/show_others"
                style="@style/myButtons"
                android:onClick="showOthers"
                android:text="@string/show_others" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cats_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/images"
                android:src="@drawable/kotya" />

            <TextView
                android:id="@+id/kotya"
                style="@style/animalDescription"
                android:text="@string/kotya" />

            <View style="@style/horizontalLines" />

            <ImageView
                style="@style/images"
                android:src="@drawable/yuki" />

            <TextView
                android:id="@+id/yuki"
                style="@style/animalDescription"
                android:text="@string/yuki" />

            <View style="@style/horizontalLines" />

            <ImageView
                style="@style/images"
                android:src="@drawable/mila" />

            <TextView
                android:id="@+id/mila"
                style="@style/animalDescription"
                android:text="@string/mila" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/others_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/images"
                android:src="@drawable/dalmatinka" />

            <TextView
                android:id="@+id/dalmatinka"
                style="@style/animalDescription"
                android:text="@string/dalmatinka" />

            <View style="@style/horizontalLines" />

            <ImageView
                style="@style/images"
                android:src="@drawable/daisy" />

            <TextView
                android:id="@+id/daisy"
                style="@style/animalDescription"
                android:text="@string/daisy" />

            <View style="@style/horizontalLines" />

            <ImageView
                style="@style/images"
                android:src="@drawable/lisichka" />

            <TextView
                android:id="@+id/lisichka"
                style="@style/animalDescription"
                android:text="@string/lisichka" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
